kubernetes/apps/dev/paperless-ngx/app/ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: paperless-ngx
  namespace: networking
  annotations:
    kubernetes.io/ingress.class: traefik-internal
spec:
  entryPoints:
    # - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`paper.${SECRET_DOMAIN}`)
      middlewares:
        - name: default
        # - name: basicauth
      services:
        - name: paperless-ngx
          namespace: dev
          port: 8000
  # Use the secret generated by cert-manager
  tls:
    secretName: "${SECRET_DOMAIN/./-}-tls"
    # secretName: '${SECRET_DOMAIN/./-}-stage-tls'
